Merge ZGP with the latest Firefox code on 2015-01-28