@@ -16,7 +16,8 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Stack;
 
 /* Reads out of a multiple level deep jar file such as
@@ -45,7 +46,7 @@ public final class GeckoJarReader {
             if (inputStream != null) {
                 bitmap = new BitmapDrawable(resources, inputStream);
             }
-        } catch (IOException ex) {
+        } catch (IOException | URISyntaxException ex) {
             Log.e(LOGTAG, "Exception ", ex);
         } finally {
             if (inputStream != null) {
@@ -76,7 +77,7 @@ public final class GeckoJarReader {
                 reader = new BufferedReader(new InputStreamReader(input));
                 text = reader.readLine();
             }
-        } catch (IOException ex) {
+        } catch (IOException | URISyntaxException ex) {
             Log.e(LOGTAG, "Exception ", ex);
         } finally {
             if (reader != null) {
@@ -94,8 +95,8 @@ public final class GeckoJarReader {
         return text;
     }
 
-    private static NativeZip getZipFile(String url) throws IOException {
-        URL fileUrl = new URL(url);
+    private static NativeZip getZipFile(String url) throws IOException, URISyntaxException {
+        URI fileUrl = new URI(url);
         return new NativeZip(fileUrl.getPath());
     }
 
@@ -109,6 +110,7 @@ public final class GeckoJarReader {
             // Some JNI code throws IllegalArgumentException on a bad file name;
             // swallow the error and return null.  We could also see legitimate
             // IOExceptions here.
+            Log.e(LOGTAG, "Exception getting input stream from jar URL: " + url, ex);
             return null;
         }
     }
